# nbd

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  contacts.db-wal  docker-compose.yml  flake.nix  setup-precommit-check.sh
.github/workflows/: ci.yml  publish.yml
.sqlx/: query-115025a2e548046671f2361c47726fda3f0442ff0f76f5cedabc3cdf0855f950.json  query-31329770e4e0f627af41eba7866238bd9560183d300cc4f504855c51f3d03d5e.json  query-4ca54fef5ee100136d76d892f75c16d81ef4b30d3c604f3bdbba6f368c342644.json  query-9a119fcf59f1e34f1df490b8150db863c60aefbed9d4fde7bce99f53fab63146.json  query-9e9e3e1758ef7628ab5412b2d186ea706d1c85a952d589b9783407705e5045a2.json  query-b8040b3cf5154437c1ba0b361c84b47a0ee826b4a999a569237bac75bc69428b.json  query-c409d1b0a511a84003321cca8ff14a9736f2e0a7d77b7599746a7f75abe2f2d7.json  query-e47542a65bf2ebbad17c41eaba1c8615fa6113bbe09d2170863804f4bc842870.json  query-ff63d6ab936c552965620421e496185bb825cce489173bbdb98906952958b343.json
migrations/: 20240705045956_contacts.sql  20240906201523_contacts.sql  20240930184147_contacts_metadata.sql  20241005032745_contacts_metadata_cascade.sql  20250328231636_modify_contacts_nullable.sql  20250403164036_birthday_field.sql  20250718182823_combine_contact_tables.sql
src/: commander.rs  contact.rs  db.rs  email.rs  errors.rs  lib.rs  main.rs  models.rs  phone_number.rs  test_helpers.rs  utils.rs  validation.rs
src/api/: main.rs
src/cli/: actions.rs  commander.rs  main.rs
src/db/: connection.rs  contact_repo.rs  fake_db.rs  metadata_repo.rs  migrations.rs  mod.rs  setup.rs  test_helpers.rs  tests.rs
src/models/: agent.rs  contact.rs  csv.rs  email.rs  metadata.rs  mod.rs  phone_number.rs  profile.rs
src/utils/: config.rs  csv.rs  date.rs  errors.rs  mod.rs  validation.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tests/: api.rs  cli.rs  component.rs  integration.rs
tests/fixtures/: alice.csv  birthday.csv  example.csv  three_birthdays.csv
