[package]
name = "connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
dotenvy = "0.15.0"
regex = "1.5.4"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.28.0", features = ["full", "test-util"] }
[dev-dependencies]
mockall = "0.12.1"