[package]
name = "nbd"
version = "0.1.0"
edition = "2021"

[package.metadata]
authors = ["Jason Ribble <jason@companionops.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
dotenvy = "0.15.0"
regex = "1.5.4"
sqlx = { version = "0.8.1", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = { version = "1.28.0", features = ["full", "test-util"] }

[dev-dependencies]
mockall = "0.12.1"
assert_cmd = "2.0.14"
predicates = "3.1"
