[package]
name = "nbd"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "test_utils"]

[package.metadata]
authors = ["Jason Ribble <jason@companionops.com>"]

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.1"
dotenvy = "0.15.0"
regex = "1.5.4"
serde = "1.0.219"
sqlx = { version = "0.8.1", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
] }
tabled = "0.18.0"
tokio = { version = "1.28.0", features = ["full", "test-util"] }

[dev-dependencies]
test_utils = { path = "./test_utils" }
mockall = "0.12.1"
assert_cmd = "2.0.14"
predicates = "3.1"
tempfile = "3.19.1"
serial_test = "3.2.0"

[[bin]]
name = "nbd-cli"
path = "src/cli/main.rs"

[lib]
name = "nbd"
path = "src/lib.rs"
